--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@ya.praktikum/react-developer-burger-ui-components": "1.14.2",
     "core-js": "^3.38.1",
+    "framer-motion": "^12.0.6",
     "lodash-es": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
