Update project settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,11 @@
       "source.organizeImports": "always"
     }
   },
+  "[javascript]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "prettier.printWidth": 120
+  },
   "[json]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
